--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: ['https://www.artikelschreiber.com/', 'https://www.artikelschreiben.com/', 'https://www.unaique.net/']
+custom: ['https://www.artikelschreiber.com/en/', 'https://www.artikelschreiben.com/', 'https://www.unaique.net/', 'https://www.unaique.net/en/']
